--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,16 @@
     "authors": [
         {
             "name": "Smile",
-            "homepage": "http://www.smile.eu/"
+            "homepage": "https://www.smile.eu/",
+            "email": "dirtech@smile.fr"
         }
     ],
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "symfony/framework-bundle": "~4.0",
+        "symfony/framework-bundle": "~4.0||~5.0",
         "hipay/hipay-fullservice-sdk-php": "^2.8",
-        "symfony/console": "~4.0",
+        "symfony/console": "~4.0||~5.0",
         "sylius/sylius": "~1.9"
     },
     "autoload": {
