--- a/config/services/client.yaml
+++ b/config/services/client.yaml
@@ -15,6 +15,7 @@ services:
             - '%smile_hipay_sylius_plugin.client.secret_passphrase%'
             - '%smile_hipay_sylius_plugin.client.stage%'
             - '%smile_hipay_sylius_plugin.client.locale%'
+            - '%smile_hipay_sylius_plugin.client.notify_url%'
 
     Smile\HipaySyliusPlugin\Builder\ApiCredentialMotoBuilder:
         class: Smile\HipaySyliusPlugin\Builder\ApiCredentialMotoBuilder
@@ -24,6 +25,7 @@ services:
             - '%smile_hipay_sylius_plugin.client.moto.secret_passphrase%'
             - '%smile_hipay_sylius_plugin.client.moto.stage%'
             - '%smile_hipay_sylius_plugin.client.moto.locale%'
+            - '%smile_hipay_sylius_plugin.client.moto.notify_url%'
         
     Smile\HipaySyliusPlugin\Registry\ApiCredentialRegistry:
         class: Smile\HipaySyliusPlugin\Registry\ApiCredentialRegistry
