Update order status when the payment ends

--- a/config/services/client.yaml
+++ b/config/services/client.yaml
@@ -37,3 +37,4 @@ services:
         arguments:
             - '@Smile\HipaySyliusPlugin\Registry\ApiCredentialRegistry'
             - '@Smile\HipaySyliusPlugin\Context\PaymentContext'
+            - '@request_stack'
