--- a/config/routing.yaml
+++ b/config/routing.yaml
@@ -3,13 +3,16 @@ sylius_hipay_plugin_notify_generic:
     methods: [GET, POST]
     defaults:
         _controller: Smile\HipaySyliusPlugin\Controller\NotifyController::doAction
+
 sylius_hipay_oney_iframe:
-    path: /hipay/profile/edit
+    path: /{_locale}/hipay/profile/edit
+    requirements:
+        _locale: ^[A-Za-z]{2,4}(_([A-Za-z]{4}|[0-9]{3}))?(_([A-Za-z]{2}|[0-9]{3}))?$
     methods: [GET, PUT]
     defaults:
         _controller: sylius.controller.customer:updateAction
         _sylius:
-            template: "@SmileHipaySyliusPlugin/SyliusShopBundle/Checkout/hipay_oney.html.twig"
+            template: "@SmileHipaySyliusPlugin/Iframe/hipay_oney_iframe_content.html.twig"
             form: Smile\HipaySyliusPlugin\Form\Type\HipayCustomerProfileType
             repository:
                 method: find
