--- a/config/services/payum.yaml
+++ b/config/services/payum.yaml
@@ -10,6 +10,8 @@ services:
         arguments:
             - "@smile_hipay_sylius_plugin.request.get_http_request"
             - '@Smile\HipaySyliusPlugin\Context\PaymentContext'
+            - '@Smile\HipaySyliusPlugin\Security\HipaySignatureVerification'
+            - '@Smile\HipaySyliusPlugin\Registry\ApiCredentialRegistry'
         tags:
             - { name: payum.action, factory: hipay_card, alias: payum.action.status }
             - { name: payum.action, factory: hipay_moto_card, alias: payum.action.status }
@@ -21,7 +23,6 @@ services:
         arguments:
             - "@monolog.logger"
             - '@Smile\HipaySyliusPlugin\Api\CreateTransaction'
-
         tags:
             - { name: payum.action, factory: hipay_card, alias: payum.action.capture }
             - { name: payum.action, factory: hipay_moto_card, alias: payum.action.capture }
@@ -35,14 +36,3 @@ services:
             - { name: payum.action, factory: hipay_moto_card, alias: sylius.resolve_next_route }
             - { name: payum.action, factory: hipay_oney3, alias: sylius.resolve_next_route }
             - { name: payum.action, factory: hipay_oney4, alias: sylius.resolve_next_route }
-
-    Smile\HipaySyliusPlugin\Payum\Action\NotifyAction:
-        class: Smile\HipaySyliusPlugin\Payum\Action\NotifyAction
-        arguments:
-            - "@smile_hipay_sylius_plugin.request.get_http_request"
-            - '@Smile\HipaySyliusPlugin\Registry\ApiCredentialRegistry'
-        tags:
-            - { name: payum.action, factory: hipay_card, alias: payum.action.notify }
-            - { name: payum.action, factory: hipay_moto_card, alias: payum.action.notify }
-            - { name: payum.action, factory: hipay_oney3, alias: payum.action.notify }
-            - { name: payum.action, factory: hipay_oney4, alias: payum.action.notify }
